--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Project Name — Modern Static Template</title>
+  <title>Fokoue Thomas — Modern Static Template</title>
   <meta name="description" content="A clean, responsive static site template for quick projects." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -91,7 +91,7 @@
     <div class="container nav">
       <a class="brand" href="#">
         <span class="brand__logo" aria-hidden="true"></span>
-        <span>FokoueThomas</span>
+        <span>Fokoue Thomas</span>
       </a>
       <nav class="nav__links" aria-label="Primary">
         <a href="#features">Features</a>
@@ -107,7 +107,7 @@
     <div class="container hero__grid">
       <div>
         <span class="hero__tag">✨ Ready-to-use static template</span>
-        <h1>Static website on AMAZON S3 Bucket <br/>Deplpoy using CI/CD pipeline</h1>
+        <h1>Static website on Linux-server <br/>Deplpoy using Docker Container</h1>
         <p>Clean structure, accessible components, and elegant styling. Replace the content and ship your landing, docs, or portfolio in minutes.</p>
         <div class="flex" style="gap:12px; margin-top:14px">
           <a class="btn btn-primary" href="#contact">Get Started</a>
